tdf#150714: [API-CHANGE] change CSV default encoding to UTF-8

Makes import and export use UTF-8 instead of Windows-1252
when executed from API without options.

Change-Id: If04b119801c2509b48ca5d809f45d8437971d4b0
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139122
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>