sc/source/ui/docshell/docsh.cxx
@@ -1272,9 +1272,9 @@ bool ScDocShell::ConvertFrom( SfxMedium& rMedium )
             if ( !bOptInit )
             {
                 //  default for ascii import (from API without options):
-                //  ISO8859-1/MS_1252 encoding, comma, double quotes
+                //  UTF-8 encoding, comma, double quotes
 
-                aOptions.SetCharSet( RTL_TEXTENCODING_MS_1252 );
+                aOptions.SetCharSet(RTL_TEXTENCODING_UTF8);
                 aOptions.SetFieldSeps( OUString(',') );
                 aOptions.SetTextSep( '"' );
             }
@@ -2458,9 +2458,9 @@ bool ScDocShell::ConvertTo( SfxMedium &rMed )
         if ( sItStr.isEmpty() )
         {
             //  default for ascii export (from API without options):
-            //  ISO8859-1/MS_1252 encoding, comma, double quotes
+            //  UTF-8 encoding, comma, double quotes
 
-            ScImportOptions aDefOptions( ',', '"', RTL_TEXTENCODING_MS_1252 );
+            ScImportOptions aDefOptions(',', '"', RTL_TEXTENCODING_UTF8);
             sItStr = aDefOptions.BuildString();
         }
 
